@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-07 07:33:51, took 00:12:54, with 60 workers, on 3448 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2024-08-07 09:07:25, took 00:13:15, with 60 workers, on 3454 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1975,6 +1975,12 @@ http://sources.freertr.org/cfg/p4lang-rout330.tst;p4lang-rout330.tst;success;p4l
 http://sources.freertr.org/cfg/p4lang-rout331.tst;p4lang-rout331.tst;success;p4lang: nsh over backplane
 http://sources.freertr.org/cfg/p4lang-rout332.tst;p4lang-rout332.tst;success;p4lang: bier core over backplane
 http://sources.freertr.org/cfg/p4lang-rout333.tst;p4lang-rout333.tst;success;p4lang: bier core over vlan backplane
+http://sources.freertr.org/cfg/p4lang-rout334.tst;p4lang-rout334.tst;success;p4lang: qinq routing
+http://sources.freertr.org/cfg/p4lang-rout335.tst;p4lang-rout335.tst;success;p4lang: qinq bridging
+http://sources.freertr.org/cfg/p4lang-rout336.tst;p4lang-rout336.tst;success;p4lang: qinq mpls
+http://sources.freertr.org/cfg/p4lang-rout337.tst;p4lang-rout337.tst;success;p4lang: bundle qinq routing
+http://sources.freertr.org/cfg/p4lang-rout338.tst;p4lang-rout338.tst;success;p4lang: bundle qinq mpls
+http://sources.freertr.org/cfg/p4lang-rout339.tst;p4lang-rout339.tst;success;p4lang: bundle qinq bridging
 http://sources.freertr.org/cfg/qos-action01.tst;qos-action01.tst;success;qos ingress transmit action
 http://sources.freertr.org/cfg/qos-action02.tst;qos-action02.tst;success;qos egress transmit action
 http://sources.freertr.org/cfg/qos-action03.tst;qos-action03.tst;success;qos ingress drop action
