@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-07 07:33:51, took 00:12:54, with 60 workers, on 3448 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2024-08-07 09:07:25, took 00:13:15, with 60 workers, on 3454 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1992,6 +1992,12 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout331.tst">p4lang-rout331.tst</a></td><td>success</td><td>p4lang: nsh over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout332.tst">p4lang-rout332.tst</a></td><td>success</td><td>p4lang: bier core over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout333.tst">p4lang-rout333.tst</a></td><td>success</td><td>p4lang: bier core over vlan backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout334.tst">p4lang-rout334.tst</a></td><td>success</td><td>p4lang: qinq routing</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout335.tst">p4lang-rout335.tst</a></td><td>success</td><td>p4lang: qinq bridging</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout336.tst">p4lang-rout336.tst</a></td><td>success</td><td>p4lang: qinq mpls</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout337.tst">p4lang-rout337.tst</a></td><td>success</td><td>p4lang: bundle qinq routing</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout338.tst">p4lang-rout338.tst</a></td><td>success</td><td>p4lang: bundle qinq mpls</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout339.tst">p4lang-rout339.tst</a></td><td>success</td><td>p4lang: bundle qinq bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action01.tst">qos-action01.tst</a></td><td>success</td><td>qos ingress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action02.tst">qos-action02.tst</a></td><td>success</td><td>qos egress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action03.tst">qos-action03.tst</a></td><td>success</td><td>qos ingress drop action</td></tr>
