@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-07 07:45:05, took 00:10:54, with 60 workers, on 551 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-08-07 09:15:32, took 00:07:47, with 60 workers, on 557 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
@@ -553,3 +553,9 @@ http://sources.freertr.org/cfg/p4lang-rout330.tst;p4lang-rout330.tst;success;p4l
 http://sources.freertr.org/cfg/p4lang-rout331.tst;p4lang-rout331.tst;success;p4lang: nsh over backplane
 http://sources.freertr.org/cfg/p4lang-rout332.tst;p4lang-rout332.tst;success;p4lang: bier core over backplane
 http://sources.freertr.org/cfg/p4lang-rout333.tst;p4lang-rout333.tst;success;p4lang: bier core over vlan backplane
+http://sources.freertr.org/cfg/p4lang-rout334.tst;p4lang-rout334.tst;success;p4lang: qinq routing
+http://sources.freertr.org/cfg/p4lang-rout335.tst;p4lang-rout335.tst;success;p4lang: qinq bridging
+http://sources.freertr.org/cfg/p4lang-rout336.tst;p4lang-rout336.tst;success;p4lang: qinq mpls
+http://sources.freertr.org/cfg/p4lang-rout337.tst;p4lang-rout337.tst;success;p4lang: bundle qinq routing
+http://sources.freertr.org/cfg/p4lang-rout338.tst;p4lang-rout338.tst;success;p4lang: bundle qinq mpls
+http://sources.freertr.org/cfg/p4lang-rout339.tst;p4lang-rout339.tst;success;p4lang: bundle qinq bridging
